--- a/OnlineBookStore/OnlineBookStore/Views/Books/Delete.cshtml
+++ b/OnlineBookStore/OnlineBookStore/Views/Books/Delete.cshtml
@@ -83,6 +83,14 @@
             @Html.DisplayFor(model => model.ImageUrl)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.PreviewUrl)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PreviewUrl)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
