--- a/OnlineBookStore/OnlineBookStore/Views/Books/Details.cshtml
+++ b/OnlineBookStore/OnlineBookStore/Views/Books/Details.cshtml
@@ -82,6 +82,14 @@
             @Html.DisplayFor(model => model.ImageUrl)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.PreviewUrl)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PreviewUrl)
+        </dd>
+
     </dl>
 </div>
 <p>
