--- a/OnlineBookStore/OnlineBookStore/Views/Books/Index.cshtml
+++ b/OnlineBookStore/OnlineBookStore/Views/Books/Index.cshtml
@@ -38,6 +38,9 @@
         <th>
             @Html.DisplayNameFor(model => model.ImageUrl)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.PreviewUrl)
+        </th>
         <th></th>
     </tr>
 
@@ -69,6 +72,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.ImageUrl)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PreviewUrl)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
